--- a/sample/index.html
+++ b/sample/index.html
@@ -9,11 +9,18 @@
 </head>
 <body>
   <header class="header">
-    <div class="header__inner">
+      <div class="header__inner">
             <a class="header__logo" href="/">
-                架空のページ
+                COACHTECH
             </a>
-        </div>
+            <nav class="header-nav">
+              <ul class="header-nav__list">
+                <li class="header-nav__item"><a href="">会社概要</a></li>
+                <li class="header-nav__item"><a href="">社員ブログ</a></li>
+                <li class="header-nav__item"><a href="">お問い合わせ</a></li>
+              </ul>
+            </nav>
+      </div>
   </header>
   <main>
     <img src="img/image01.jpg">
